fix: vertically align cross icon

--- a/packages/osc-ui/src/components/Autocomplete/autocomplete.scss
+++ b/packages/osc-ui/src/components/Autocomplete/autocomplete.scss
@@ -64,9 +64,19 @@
             padding: var(--font-scale-xl);
         }
 
-        &__input-clear-button {
+        &__input-clear-button-wrapper {
             position: absolute;
-            top: calc($space-m - 10px);
+            top: 0;
+            z-index: -1;
+            display: flex;
+            align-items: center;
+            justify-content: right;
+            width: 100%;
+            height: 100%;
+        }
+
+        &__input-clear-button {
+            position: relative;
             right: $space-3xl;
             cursor: pointer;
         }
